Backend Refactoring
