# backend/swagger.json
@@ -13,7 +13,7 @@
         }
     ],
     "paths": {
-        "/user/": {
+        "/user/create": {
             "post": {
                 "summary": "Create a new user",
                 "description": "Route responsible for creating a new user",
@@ -93,43 +93,41 @@
                 }
             }
         },
-        "/user/{id}/": {
-            "/user/findById/{id}": {
-                "get": {
-                    "summary": "Search user by id",
-                    "description": "Route responsible for searching for user by id",
-                    "tags": [
-                        "Users"
-                    ],
-                    "security": [
-                        {
-                            "bearerAuth": []
-                        }
-                    ],
-                    "parameters": [
-                        {
-                            "in": "path",
-                            "name": "id",
-                            "type": "string",
-                            "description": "User ID",
-                            "required": true
-                        }
-                    ],
-                    "responses": {
-                        "401": {
-                            "description": "Unauthorized"
-                        },
-                        "400": {
-                            "description": "Not Found"
-                        },
-                        "200": {
-                            "description": "OK",
-                            "content": {
-                                "application/json": {
-                                    "schema": {
-                                        "type": "object",
-                                        "$ref": "#/components/schemas/User"
-                                    }
+        "/user/findById/{id}": {
+            "get": {
+                "summary": "Search user by id",
+                "description": "Route responsible for searching for user by id",
+                "tags": [
+                    "Users"
+                ],
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "type": "string",
+                        "description": "User ID",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "400": {
+                        "description": "Not Found"
+                    },
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "$ref": "#/components/schemas/User"
                                 }
                             }
                         }
@@ -137,7 +135,7 @@
                 }
             }
         },
-        "/user/{id}": {
+        "/user/update/{id}": {
             "patch": {
                 "summary": "Update user by id",
                 "description": "Route responsible for editing the user by id",
@@ -195,7 +193,7 @@
                 }
             }
         },
-        "/auth": {
+        "/auth/login": {
             "post": {
                 "summary": "Login to PurpleNote",
                 "description": "Route responsible for logging in a registered user",
@@ -743,9 +741,9 @@
             "Comment": {
                 "type": "object",
                 "properties": {
-                  "message": {
-                    "type": "string"
-                  }
+                    "message": {
+                        "type": "string"
+                    }
                 }
             }
         }
